# LIB-BG-MCPCore

./: .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.jsonc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.MD  Make.cmd  Makefile  README.MD  SECURITY.MD  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/config/pr-labeler/: path-labels.yml  triage-rules.yml
.github/workflows/: ai-issue-summary.yml  documentation.yml  pr-labeler.yml  python-automatic-release.yml  security.yml  teams-notifications.yml  tests.yml
docs/: README.template.MD  SECURITY.template.MD  api.md  authentication.md  changelog.md  concepts.md  deployment.md  extensions.md  index.md  installation.md  observability.md  plugins.md  profiles.md  quickstart.md  security.md  tiers.md  tools.md  usage.md
examples/: README.md
examples/example_plugin/: README.md  pyproject.toml
examples/example_plugin/src/bg_mcpcore_echo/: __init__.py
examples/gateway_server/: README.md  main.py
examples/openapi_server/: README.md  main.py  petstore-mini.json  profile.json
examples/openapi_with_python_tools/: README.md  extra_tools.py  main.py  profile.json
examples/python_tools_server/: README.md  main.py  my_auth.py  my_tools.py  profile.json
examples/registry_server/: README.md  main.py  profile.json
scripts/: generate_schemas.py
src/bg_mcpcore/: __init__.py  _config_protocols.py  app.py  cli.py  gateway.py  plugins.py  scaffold.py
src/bg_mcpcore/_scaffold/: index.html
src/bg_mcpcore/auth/: __init__.py  generic_oidc.py  obo.py  resolvers.py  storage.py
src/bg_mcpcore/extensions/: __init__.py  config.py  loader.py  prompts.py  resources.py  schema.json
src/bg_mcpcore/http/: __init__.py  client.py  retry.py
src/bg_mcpcore/observability/: __init__.py  banner.py  logging_setup.py  sentry.py
src/bg_mcpcore/openapi/: __init__.py  loader.py  tool_provider.py
src/bg_mcpcore/profile/: __init__.py  loader.py  models.py  schema.json
src/bg_mcpcore/providers/: __init__.py  access_control.py  entra.py  generic.py  google.py  middleware.py  protocols.py
src/bg_mcpcore/server/: __init__.py  middleware.py  routes.py  runner.py
src/bg_mcpcore/settings/: __init__.py  base.py  enums.py  factory.py  helpers.py  mixins.py
src/bg_mcpcore/testing/: __init__.py  plugin.py  stubs.py
src/bg_mcpcore/tools/: __init__.py  export.py  protocol.py  registry.py
tests/: test_access_control.py  test_assembler.py  test_auth_coverage.py  test_export_source.py  test_extensions.py  test_extras.py  test_gateway.py  test_helpers.py  test_logging.py  test_obo.py  test_openapi.py  test_plugin_discovery.py  test_profile.py  test_providers.py  test_providers_generic.py  test_rate_limit.py  test_request_json.py  test_retry.py  test_routes.py  test_runner.py  test_scaffold.py  test_settings.py  test_smoke.py  test_storage.py  test_testkit.py
